2009-03-08  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Release 1.0.1

	* configure.ac (CXXFLAGS): Added -pedantic -Wall -Wno-long-long.

2009-03-07  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* configure.ac: Renamed package to incf-music (since people in the
	Debian community has complained about the too generic package
	name).

2009-03-06  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Makefile.am (EXTRA_DIST): Added debian subdirectory to
	distribution.

2009-03-03  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Release 1.0
	
2009-02-11  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* mpidep: New directory for MPI dependent code.

	* configure.ac: Generate mpidep/Makefile.

	* configure.ac: Test if ompi_comm_free exists instead of
	ompi_comm_create which doesn't exist in OpenMPI 1.3.

	* configure.ac: Pass variables to be substituted one-by-one to
	AC_SUBST.

2008-11-03  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* configure.ac (OPTIONAL_UTILS): New variable.  Add viewevents
	conditionally depending on existence of GL/glut.h.

2008-10-16  Mikael Djurfeldt  <mikael@moritz-heliass-macbook.local>

	* configure.ac: Use $CXX instead of $MPI_CXX in tests for
	configuration of MPI implementation dependent code.

2008-09-23  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* configure.ac: Setup MPI_C; Test for MPI::Init_thread.

2007-11-07  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* configure.ac: Don't try to build shared libraries on BGL.

	* autogen.sh, aclocal.sh: Suppress error messages from which.

2007-11-06  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* configure.ac: Rewritten to make better use of AC_PROG_CXX; Logic
	added to manage subdirectory rudeconfig directly (tests moved from
	original rudeconfig configure.ac).

2007-11-02  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* configure.ac: Test for ompi_comm_create (used to identify
	OPENMPI); Moved configuration of rudeconfig to beginning.

	* Makefile.am (SUBDIRS): Added rudeconfig.
