@@ -1,3 +1,8 @@
+2009-03-09  Mikael Djurfeldt  <mikael@djurfeldt.com>
+
+	* Makefile.am (debian-source): Copy manual source into debian
+	source tree.
+
 2009-03-08  Mikael Djurfeldt  <mikael@djurfeldt.com>
 
 	* Release 1.0.1
